# fucina

./: .gitignore  CLAUDE.md  Cargo.toml  JOURNEY.md  Makefile  README.md  build.rs
.github/workflows/: ci.yml  release.yml
bundle/: Fucina.icns  Info.plist.template  net.calii.fucina.daemon.plist
bundle/scripts/: postinstall
docs/: daemon-mode.md  giorno-double-instance-and-private-repos.md
reports/: 2026-05-16T09:46:24Z-failure-lockup-diagnosis.md
scripts/: deploy.sh  install.sh
src/: client.rs  config.rs  expr.rs  macos_menu.rs  main.rs  poller.rs  proto.rs  reporter.rs  runner.rs  taskstate.rs
