[package]
name = "fucina"
version = "0.1.0"
edition = "2021"
description = "Gitea Actions runner in Rust"
license = "MIT"
repository = "https://github.com/calibrae/fucina"
readme = "README.md"
keywords = ["gitea", "actions", "ci", "runner"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "fucina"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
