[package]
name = "fucina"
version = "0.2.5"
edition = "2021"
description = "Gitea Actions runner in Rust"
license = "MIT"
repository = "https://github.com/calibrae/fucina"
readme = "README.md"
keywords = ["gitea", "actions", "ci", "runner"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "fucina"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSThread"] }
objc2-app-kit = { version = "0.2", features = [
    "NSApplication",
    "NSResponder",
    "NSRunningApplication",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSMenu",
    "NSMenuItem",
    "NSButton",
    "NSControl",
    "NSImage",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
